tooling/nargo_cli/tests/snapshots/execution_success/regression_7323/execute__tests__expanded.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: expanded_code
---
fn main(x: Field) {
    {
        let internal___variable: Field = x;
        match internal___variable {
            1 => panic(f"Branch 1 should not be taken"),
            2 => panic(f"Branch 2 should not be taken"),
            3 => panic(f"Branch 3 should not be taken"),
            _ => {
                let _: Field = internal___variable;
                ()
            },
        }
    }
}
